[tool.poetry]
name = "cilantro-convert-worker"
version = "0.1.0"
description = ""
authors = ["DAI Wiss-IT <dav@dainst.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
celery = "^4.2.1"
redis = "^3.4.1"
pillow = "^8.3.2"
PyPDF2 = "^1.26.0"
pdftotext = "^2.1.4"
Wand = "^0.5.9"
pyocr = "^0.7.2"
pymongo = "^3.10.1"
pyyaml = "^5.3.1"
argh = "^0.26.2"
ocrmypdf = "^12.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
