[tool.poetry]
name = "cilantro-convert-worker"
version = "0.1.0"
description = ""
authors = ["DAI Wiss-IT <dav@dainst.de>"]

[tool.poetry.dependencies]
python = "^3.7.1"
watchdog = "^0.10.3"
celery = "^5.2.2"
redis = "^3.5.3"
pymongo = "^3.10.1"
jinja2 = "^2.11.2"
lxml = "^4.6.5"
beautifulsoup4 = "^4.9.1"
pyyaml = "^5.3.1"
argh = "^0.26.2"
dkpro-cassis = "^0.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
