[tool.poetry]
name = "cilantro-service"
version = "0.1.0"
description = ""
authors = ["DAI Wiss-IT <dev@dainst.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
watchdog = "^0.9.0"
celery = "^4.2.1"
redis = "^3.3.11"
flask = "^1.1.1"
flask-cors = "^3.0.8"
Flask-HTTPAuth = "^3.3.0"
bcrypt = "^3.1.7"
gunicorn = "^20.0.4"
gevent = "^1.4.0"
pymongo = "^3.9.0"
jsonschema = "^3.2.0"
requests = "^2.22.0"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
