[tool.poetry]
name = "cilantro-test"
version = "0.1.0"
description = ""
authors = ["DAI Wiss-IT <dav@dainst.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
flask = "^1.1.2"
pyyaml = "^5.1"
celery = "^4.2.1"
redis = "^3.5.3"
pillow = "^8.1.2"
docker-compose = "^1.27.4"
PyPDF2 = "^1.26.0"
pdftotext = "^2.1.5"
Wand = "^0.6.3"
jinja2 = "^2.11.2"
lxml = "^4.6.2"
flask-cors = "^3.0.9"
pyocr = "^0.7.2"
Flask-HTTPAuth = "^4.1.0"
bcrypt = "^3.2.0"
pymongo = "^3.11.0"
jsonschema = "^3.2.0"
mysql-connector = "^2.2.9"
beautifulsoup4 = "^4.9.2"
dkpro-cassis = "^0.3.0"
ocrmypdf = "^12.0.3"
# Fixing the sphinx version avoids some incompatibility errors when building the documentation
Sphinx = "^2.4.4"
sphinxcontrib-httpdomain = "^1.7.0"
# dataclasses are needed for tests of the nlp worker. Can be removed if python_version >= 3.7
dataclasses = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
